--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV = development
 VUE_APP_PRFIEX = //test-
-VUE_APP_API_PREFIX = //test- 
-VUE_APP_PUBLIC_PATH = //test- /vue项目基础模板
+VUE_APP_API_PREFIX = //test-
+VUE_APP_PUBLIC_PATH = //test-
