--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "author": "于海航&lt;18500214211@126.com&gt;",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve --mode local",
-    "test": "vue-cli-service build --mode development",
-    "online": "vue-cli-service build --mode production"
+    "serve": "vue-cli-service serve --mode local",
+    "dev": "vue-cli-service build --mode development",
+    "build": "vue-cli-service build --mode production"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "axios-extensions-server": "^1.0.0",
     "axios-progress-bar": "^1.2.0",
     "core-js": "^2.6.5",
+    "element-ui": "^2.13.0",
     "vue": "^2.6.10",
     "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.7"
